--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,19 +1,29 @@
 import(lmerTest)
+importFrom(lme4, VarCorr, fixef, isGLMM, isLMM, getME, sigma)
 import(Hmisc)
 importFrom("graphics", plot)
-importFrom(gplots, barplot2)
+#importFrom(gplots, barplot2)
+importFrom(xtable, xtable)
+importFrom(plyr, llply)
+import(methods)
 import(parallel)
-import(plyr)
-import(lsmeans)
+#import(plyr)
 import(doBy)
-import(xtable)
+import(shiny)
+#import(xtable)
+import(reshape2)
+import(ggplot2)
+import(googleVis)
+import(shinyBS)
 
 export(sensmixed)
 export(consmixed)
 export(saveToDoc)
+export(SensMixedUI)
 #exportClasses(sensmixed)
 #exportClasses(consmixed)
 export(convertToFactors)
+export(plotLSMEANS)
 
 
 S3method(print, sensmixed)
